Closed
Bug 1212149
Opened 10 years ago
Closed 10 years ago
Please implement e10s support for opening notification settings (alertsettingscallback)
Categories
(Core :: DOM: Push Subscriptions, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: edwong, Assigned: lina)
References
Details
Attachments
(1 file)
this is the e10s version of this bug 1208295
STR:
0. in nightly enable e10s
1. goto: https://people.mozilla.org/~ewong2/push-notification-test/
2. click pop notification
3. in permissions dialog 'allow'
4. on mac, click on the '...' and select 'disable notifications for this site'
(windows to be implemented)
5. click on the padlock to see permissions
actual: site permissions say 'allow'
expected: should say 'block', this works on non-e10s
Updated•10 years ago
|
Updated•10 years ago
|
tracking-e10s:
--- → +
| Reporter | ||
Comment 1•10 years ago
|
||
NI for tracking - this is higher priority than 1210211
Flags: needinfo?(wchen)
| Reporter | ||
Updated•10 years ago
|
Assignee: nobody → kcambridge
Updated•10 years ago
|
Flags: needinfo?(wchen)
| Assignee | ||
Comment 2•10 years ago
|
||
| Assignee | ||
Comment 3•10 years ago
|
||
Bug 1212149 - e10s support for opening notification settings. r?wchen
Attachment #8676594 -
Flags: review?(wchen)
| Assignee | ||
Comment 4•10 years ago
|
||
| Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8676594 [details]
MozReview Request: Bug 1212149 - e10s support for opening notification settings. r?wchen
Bug 1212149 - e10s support for opening notification settings. r?wchen
| Assignee | ||
Comment 6•10 years ago
|
||
| Assignee | ||
Comment 7•10 years ago
|
||
Comment 8•10 years ago
|
||
Comment on attachment 8676594 [details]
MozReview Request: Bug 1212149 - e10s support for opening notification settings. r?wchen
https://reviewboard.mozilla.org/r/22763/#review20515
::: dom/ipc/ContentParent.h:759
(Diff revision 1)
> + bool HasNotificationPermission(const IPC::Principal& aPrincipal) const;
It looks like you can make this a static function in ContentParent.cpp since it's not called elsewhere.
::: dom/notification/Notification.cpp:1142
(Diff revision 1)
> + nsCOMPtr<nsIObserverService> obs = mozilla::services::GetObserverService();
Assertion for parent process. Also, can we move this method to the Notification class?
Attachment #8676594 -
Flags: review?(wchen) → review+
| Assignee | ||
Comment 9•10 years ago
|
||
| Assignee | ||
Comment 10•10 years ago
|
||
https://hg.mozilla.org/integration/fx-team/rev/1105f8e2c4857800a91f6b8ead4359f641c3bfb5
Bug 1212149 - e10s support for opening notification settings. r=wchen
| Assignee | ||
Comment 11•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•