Bug 1212149 - e10s support for opening notification settings. r=wchen